# Physical-AI-Humanoid-Robotics

./: .gitignore  README.md  docker-compose.yaml  package-lock.json  qdrant_diagnostic.py  test_commit.txt  test_qdrant_connection.py
.claude/: settings.local.json
.claude/agents/: error-fix-pro.md
.gemini/: settings.json
.github/workflows/: deploy.yml
.specify/memory/: constitution.md
backend/: README.md  agent.py  api.py  config.py  debug_retrieval.py  exceptions.py  main.py  models.py  pyproject.toml  requirements.txt  retrieve.py  test_qdrant.py  test_qdrant_connection.py  utils.py
backend/services/: embedding_service.py  vector_service.py
backend/src/: main.py
backend/src/api/: chatbot.py  translation.py
backend/src/models/: chatbot_response.py  user_profile.py  user_query.py
backend/src/services/: embedding_service.py  ingestion_service.py  personalization_service.py  rag_service.py  translation_service.py
backend/tests/: test_retrieve.py
backend/tests/api/: test_personalization_service.py  test_rag_service.py
backend/tests/unit/: test_chatbot_response.py  test_translation_service.py  test_user_profile.py  test_user_query.py
docs/: rag-testing-guide.md
frontend/: README.md  docusaurus.config.js  index.html  package-lock.json  package.json  sidebars.js  vercel.json
frontend/.docusaurus/: client-manifest.json  client-modules.js  codeTranslations.json  docusaurus.config.mjs  globalData.json  i18n.json  registry.js  routes.js  routesChunkNames.json
frontend/docs/: 01.introduction-to-physical-ai.mdx  02.basics-of-humanoid-robotics.mdx  (+5 more)
(+125 files in other folders)
